fixed print cutting off edges

--- a/css/agency.css
+++ b/css/agency.css
@@ -857,4 +857,7 @@ th {
   body * {
     display: none;
   }
+  body {
+    margin: 5mm 5mm 5mm 5mm;
+  }
 }
